--- a/frontend/src/forms/TrackStatus.css
+++ b/frontend/src/forms/TrackStatus.css
@@ -1,3 +1,8 @@
+.card-container {
+  width: 50%; /* Adjust width as needed */
+  max-width: 300px; /* Optional: Set a max-width for better responsiveness */
+  margin: 0 auto; /* Center the card horizontally */
+}
 
 .custom-button {
   background-color: #488b8f; /* Default Bootstrap primary color */
@@ -16,4 +21,11 @@
 .custom-button:hover {
   background-color: #488b8f; /* Darker shade for hover */
   color: white;
+}
+
+.status-container {
+  width: 50%;
+  max-width: 600px;
+  max-height: 600px;
+  margin: 20px auto; /* Center the card and add some margin for spacing */
 }
