--- a/frontend/src/forms/HelpAndSupport.css
+++ b/frontend/src/forms/HelpAndSupport.css
@@ -1,7 +1,7 @@
 .guide-container{
     text-align: left;
-    font-family: Georgia;
-    color: #488b8f;
+    font-family: 'Cambria';
+    color: #a21232;
     justify-content: left;
 }
 
