--- a/frontend/src/forms/UpdateOperator.css
+++ b/frontend/src/forms/UpdateOperator.css
@@ -12,8 +12,8 @@
   
   h2 {
     padding-top: 3rem;
-    font-family: 'Georgia';
-    color: #488b8f;
+    font-family: 'Cambria';
+    color: #a21232;
     text-align: center;
     margin-bottom: 2rem;
   }
@@ -26,7 +26,7 @@
     display: block;
     margin-bottom: 1rem;
     font-size: large;
-    font-family: 'Georgia';
+    font-family: 'Cambria';
   }
   
   .form-group input {
@@ -34,7 +34,7 @@
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    font-family: 'Georgia';
+    font-family: 'Cambria';
     font-size: 1rem;
   }
   
@@ -43,16 +43,16 @@
     padding: 0.75rem;
     border: none;
     border-radius: 5px;
-    background-color: #488b8f;
+    background-color: #a21232;
     color: white;
-    font-family: 'Georgia';
+    font-family: 'Cambria';
     font-size: 1.25rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   button[type="submit"]:hover {
-    background-color: #488b8f;
+    background-color: #a21232;
     color: white;
   }
 
@@ -62,12 +62,12 @@
   
   .card-footer .btn-default {
     width: 50%; /* Set the width of the button */
-    background-color: #5ea3a3;
-    border-color: #5ea3a3;
+    background-color: #a21232;
+    border-color: #a21232;
     color: white;
   }
   
   .card-footer .btn-default:hover {
-    background-color: #5ea3a3;
-    border-color: #5ea3a3;
+    background-color: #a21232;
+    border-color: #a21232;
   }
