--- a/frontend/src/forms/UpdateUser.css
+++ b/frontend/src/forms/UpdateUser.css
@@ -8,13 +8,13 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  color: #488b8f;
+  color: #a21232;
 }
 
 h2 {
   padding-top: 3rem;
-  font-family: 'Georgia';
-  color: #488b8f;
+  font-family: 'Cambria';
+  color: #a21232;
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -27,7 +27,7 @@ h2 {
   display: block;
   margin-bottom: 1rem;
   font-size: large;
-  font-family: 'Georgia';
+  font-family: 'Cambria';
 }
 
 .form-group input,
@@ -36,7 +36,7 @@ h2 {
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-family: 'Georgia';
+  font-family: 'Cambria';
   font-size: 1rem;
 }
 
@@ -46,9 +46,9 @@ button[type="submit"],
     padding: 0.75rem;
     border: none;
     border-radius: 5px;
-    background-color: #488b8f;
+    background-color: #a21232;
     color: white;
-    font-family: 'Georgia';
+    font-family: 'Cambria';
     font-size: 1.25rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -56,17 +56,17 @@ button[type="submit"],
 
 button[type="submit"]:hover,
 .btn-default:hover {
-  background-color: #488b8f;
+  background-color: #a21232;
   color: #fff;
 }
 
 .card-footer .btn-default {
-  background-color: #488b8f;
-  border-color: #488b8f;
+  background-color: #a21232;
+  border-color: #a21232;
   color: white;
 }
 
 .card-footer .btn-default:hover {
-  background-color: #407a76;
-  border-color: #407a76;
+  background-color: #a21232;
+  border-color: #a21232;
 }
